--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ section {
   height: 100vh;
   scroll-snap-align: start;
   position: relative;
+  overflow: hidden;
 }
 
 code {
